# django_jsonapi_training_columbia_it

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  tox.ini
myapp/: models.py  serializers.py  views.py
myapp/fixtures/: testcases.yaml
myapp/tests/: test_models.py
myapp/tests/baker_recipes/: baker_recipes.py
training/: settings.py  urls.py
